added navbar and banner section

--- a/index.html
+++ b/index.html
@@ -3,12 +3,60 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- ==============boxicons link================== -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/boxicons@latest/css/boxicons.min.css"
+    />
+    <!-- ==============css link================== -->
     <link rel="stylesheet" href="style.css" />
+    <!-- ==============icon link================== -->
     <link rel="icon" type="image/png" href="images/Frame.png" />
     <title>Gamer-Zone</title>
   </head>
   <body>
-    <h1 class="title-style title-font">We are gamer</h1>
-    
+    <header>
+      <nav class="navbar container flex">
+        <div class="logo flex-row-center">
+          <img src="images/Frame.png" alt="" />
+          <a href="#" class="logo-title">
+            <span class="first-letter">G</span>amer
+          </a>
+        </div>
+        <ul class="nav-link flex-row-center">
+          <a href="#"><li>About Us</li></a>
+          <a href="#"><li>Developers</li></a>
+          <a href="#" class="follow-us flex-row-center">
+            Follow Us On
+            <i class="bx bxl-youtube"></i>
+            <i class="bx bxl-tiktok"></i>
+          </a>
+        </ul>
+      </nav>
+      <div class="banner container flex">
+        <div class="banner-description flex-col-center">
+          <p class="banner-title">Play Like The</p>
+          <p class="title-style title-font banner-title-font">G.O.A.T</p>
+          <div class="subtitle-font banner-subtitle-font flex-col-center">
+            <p class="icon-text">
+              <i class="bx bxs bx-play-circle"></i> 1-Click instant play
+            </p>
+            <p class="icon-text">
+              <i class="bx bxs bx-download"></i> No Download
+            </p>
+            <p class="icon-text">
+              <i class="bx bxs bxs-group"></i> 1000s of supported online games
+            </p>
+          </div>
+          <p class="flex btns">
+            <a href="#"><button class="btn btn1">SIGN IN</button></a>
+            <a href="#"><button class="btn btn2">GO ROGUE</button></a>
+          </p>
+        </div>
+        <div class="banner-img">
+          <img src="images/Group 18.png" alt="" />
+        </div>
+      </div>
+    </header>
   </body>
 </html>
