--- a/index.html
+++ b/index.html
@@ -58,5 +58,119 @@
         </div>
       </div>
     </header>
+    <section class="container gamer-section flex">
+      <div class="section-img">
+        <img src="images/pngwing 4.png" alt="" />
+      </div>
+      <div class="section-description">
+        <p class="title-font title-style">We are gamer</p>
+        <p class="subtitle-font">
+          An international digital games and entertainment company. We develop,
+          publish and distribute multiplayer mobile games. We reach over 400
+          million players each month and our audience keeps growing.
+        </p>
+        <button class="btn btn1">KNOW MORE</button>
+        <p>
+          Our purpose...<br /><span class="purpose"
+            >“unleash the gamer in everyone”</span
+          >
+        </p>
+      </div>
+    </section>
+    <section class="section-online-game container">
+      <div class="online-game-description">
+        <p class="title-font online-game-line-spacing">
+          Online Games
+          <span class="title-style online-game-line-spacing">Funny Videos</span>
+        </p>
+        <p class="subtitle-font">
+          A Collection of Hilarious Videos to Brighten Your Day
+        </p>
+      </div>
+      <div class="video-cards">
+        <!-- ====card1==== -->
+        <div class="video-card">
+          <div class="card-image">
+            <div class="image-container">
+              <img src="images/Rectangle4.png" alt="" />
+              <div class="overlay"></div>
+              <div class="play-now">
+                <i class="bx bx-play-circle"></i>
+                <span>Watch Now</span>
+              </div>
+            </div>
+          </div>
+          <p class="card-desc subtitle-font">
+            No Download. No Installs. Play <br />
+            games Instantly on Gamer.
+          </p>
+        </div>
+        <!-- ====card2==== -->
+        <div class="video-card">
+          <div class="card-image">
+            <div class="image-container">
+              <img src="images/Rectangle 5.png" alt="" />
+              <div class="overlay"></div>
+              <div class="play-now">
+                <i class="bx bx-play-circle"></i>
+                <span>Watch Now</span>
+              </div>
+            </div>
+          </div>
+          <p class="card-desc subtitle-font">
+            Did you score? #unblockedgames <br />
+            #school
+          </p>
+        </div>
+        <!-- ====card3==== -->
+        <div class="video-card">
+          <div class="card-image">
+            <div class="image-container">
+              <img src="images/Rectangle4.png" alt="" />
+              <div class="overlay"></div>
+              <div class="play-now">
+                <i class="bx bx-play-circle"></i>
+                <span>Watch Now</span>
+              </div>
+            </div>
+          </div>
+          <p class="card-desc subtitle-font">
+            Breaking game records <br />
+            like OG
+          </p>
+        </div>
+        <!-- ====card4==== -->
+        <div class="video-card">
+          <div class="card-image">
+            <div class="image-container">
+              <img src="images/Rectangle 6.png" alt="" />
+              <div class="overlay"></div>
+              <div class="play-now">
+                <i class="bx bx-play-circle"></i>
+                <span>Watch Now</span>
+              </div>
+            </div>
+          </div>
+          <!-- <div class="hover-color"></div> -->
+          <p class="card-desc subtitle-font">
+            Busted gaming on school laptop, <br />
+            but you are still lit.
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="play-instantly container">
+      <div class="play-instantly-description">
+        <p class="title-font"><span class="title-style">Play Instantly,</span> <br> No Downloads <br> No Installs.</p>
+        <p class="subtitle-font">Play games online for free without
+          downloading. <br> Just click the Play button <br>
+          and play instantly in your browser.</p>
+      </div>
+      <div class="play-instantly-image">
+        <div class="main-image"><img src="images/Rectangle 55.png" alt="" /></div>
+        <div class="positon-image"><img src="images/Rectangle 66.png" alt="" /></div>
+      </div>
+    </section>
   </body>
 </html>
