complete instant play section

--- a/index.html
+++ b/index.html
@@ -160,16 +160,86 @@
       </div>
     </section>
 
-    <section class="play-instantly container">
+    <section class="play-instantly1 container play-instantly">
       <div class="play-instantly-description">
-        <p class="title-font"><span class="title-style">Play Instantly,</span> <br> No Downloads <br> No Installs.</p>
-        <p class="subtitle-font">Play games online for free without
-          downloading. <br> Just click the Play button <br>
-          and play instantly in your browser.</p>
+        <p class="title-font">
+          <span class="title-style">Play Instantly,</span> <br />
+          No Downloads <br />
+          No Installs.
+        </p>
+        <p class="subtitle-font">
+          Play games online for free without downloading. <br />
+          Just click the Play button <br />
+          and play instantly in your browser.
+        </p>
       </div>
       <div class="play-instantly-image">
-        <div class="main-image"><img src="images/Rectangle 55.png" alt="" /></div>
-        <div class="positon-image"><img src="images/Rectangle 66.png" alt="" /></div>
+        <div class="main-image">
+          <img src="images/Rectangle 55.png" alt="" />
+        </div>
+        <div class="position-image">
+          <img src="images/Rectangle 66.png" alt="" />
+        </div>
+      </div>
+    </section>
+    <section class="play-instantly2 container play-instantly">
+      <div class="play-instantly-description2">
+        <p class="title-font">
+          <span class="title-style">Play Games <br> Online </span>
+          Anywhere, <br> Anytime!
+        </p>
+        <p class="subtitle-font">
+          Play games online for free without downloading. <br />
+          Just click the Play button <br />
+          and play instantly in your browser.
+        </p>
+      </div>
+      <div class="play-instantly-image2">
+        <div class="main_img2">
+          <img src="images/Rectangle 67.png" alt="" />
+        </div>
+        <div class="position_img2">
+          <img src="images/Rectangle 78.png" alt="" />
+        </div>
+      </div>
+    </section>
+
+    <section class="button-link-section container gamer-section">
+      <div class="button-name">
+        <div class="game-img"><img src="images/Rectangle 11.png" alt="" ></div>
+        <p class="game-name">Action Games</p>
+      </div>
+      <div class="button-name">
+        <div class="game-img"><img src="images/Rectangle 12.png" alt="" ></div>
+        <p class="game-name">Adventure Games</p>
+      </div>
+      <div class="button-name">
+        <div class="game-img"><img src="images/Rectangle 13.png" alt="" ></div>
+        <p class="game-name">Arcade Games</p>
+      </div>
+      <div class="button-name">
+        <div class="game-img"><img src="images/Rectangle 14.png" alt="" ></div>
+        <p class="game-name">Educational Games</p>
+      </div>
+      <div class="button-name">
+        <div class="game-img"><img src="images/Rectangle 15.png" alt="" ></div>
+        <p class="game-name">Word Games</p>
+      </div>
+      <div class="button-name">
+        <div class="game-img"><img src="images/Rectangle 16.png" alt="" ></div>
+        <p class="game-name">Role Palying Games</p>
+      </div>
+      <div class="button-name">
+        <div class="game-img"><img src="images/Rectangle 17.png" alt="" ></div>
+        <p class="game-name">Music & Audio Games</p>
+      </div>
+      <div class="button-name">
+        <div class="game-img"><img src="images/Rectangle 18.png" alt="" ></div>
+        <p class="game-name">Puzzle Games</p>
+      </div>
+      <div class="button-name">
+        <div class="game-img"><img src="images/Rectangle 18.png" alt="" ></div>
+        <p class="game-name">Strategy Games</p>
       </div>
     </section>
   </body>
