--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
         <div class="game-img"><img src="images/Rectangle 11.png" alt="" ></div>
         <p class="game-name">Action Games</p>
       </div>
-      <div class="button-name">
+      <div class="button-name btn-fixed">
         <div class="game-img"><img src="images/Rectangle 12.png" alt="" ></div>
         <p class="game-name">Adventure Games</p>
       </div>
