complete the gamer-Zone

--- a/index.html
+++ b/index.html
@@ -185,8 +185,12 @@
     <section class="play-instantly2 container play-instantly">
       <div class="play-instantly-description2">
         <p class="title-font">
-          <span class="title-style">Play Games <br> Online </span>
-          Anywhere, <br> Anytime!
+          <span class="title-style"
+            >Play Games <br />
+            Online
+          </span>
+          Anywhere, <br />
+          Anytime!
         </p>
         <p class="subtitle-font">
           Play games online for free without downloading. <br />
@@ -204,43 +208,107 @@
       </div>
     </section>
 
+    <section class="carrer container">
+      <div class="carrer-description">
+        <p class="title-font text-white">Careers</p>
+        <p class="subtitle-font text-white">
+          Gamer is driven to create the best and most fun games for our millions
+          of players all around the world, and we,re always on the lookout for
+          more top talent to join our growing team. If you,d like to help us
+          make great games and be a part of Gamers bright future, we,d love to
+          hear from you.
+        </p>
+        <div class="address">
+          <div class="left">
+            <p class="text-white">Multimedia Artist +</p>
+            <p class="text-white">Data Engineer +</p>
+            <p class="text-white">Adroid Engineer +</p>
+          </div>
+          <div class="right">
+            <p class="text-white">Lisbon, Portugal</p>
+            <p class="text-white">Lisbon, Portugal</p>
+            <p class="text-white">Zoetermeer, Netherlands</p>
+          </div>
+        </div>
+        <div class="carrer-image">
+          <button class="btn btn3">SEE ALL POSITIONS</button>
+        </div>
+      </div>
+      <div>
+        <img src="images/Group 65.png" alt="" />
+      </div>
+    </section>
+
     <section class="button-link-section container gamer-section">
       <div class="button-name">
-        <div class="game-img"><img src="images/Rectangle 11.png" alt="" ></div>
+        <div class="game-img"><img src="images/Rectangle 11.png" alt="" /></div>
         <p class="game-name">Action Games</p>
       </div>
       <div class="button-name btn-fixed">
-        <div class="game-img"><img src="images/Rectangle 12.png" alt="" ></div>
+        <div class="game-img"><img src="images/Rectangle 12.png" alt="" /></div>
         <p class="game-name">Adventure Games</p>
       </div>
       <div class="button-name">
-        <div class="game-img"><img src="images/Rectangle 13.png" alt="" ></div>
+        <div class="game-img"><img src="images/Rectangle 13.png" alt="" /></div>
         <p class="game-name">Arcade Games</p>
       </div>
       <div class="button-name">
-        <div class="game-img"><img src="images/Rectangle 14.png" alt="" ></div>
+        <div class="game-img"><img src="images/Rectangle 14.png" alt="" /></div>
         <p class="game-name">Educational Games</p>
       </div>
       <div class="button-name">
-        <div class="game-img"><img src="images/Rectangle 15.png" alt="" ></div>
+        <div class="game-img"><img src="images/Rectangle 15.png" alt="" /></div>
         <p class="game-name">Word Games</p>
       </div>
       <div class="button-name">
-        <div class="game-img"><img src="images/Rectangle 16.png" alt="" ></div>
+        <div class="game-img"><img src="images/Rectangle 16.png" alt="" /></div>
         <p class="game-name">Role Palying Games</p>
       </div>
       <div class="button-name">
-        <div class="game-img"><img src="images/Rectangle 17.png" alt="" ></div>
+        <div class="game-img"><img src="images/Rectangle 17.png" alt="" /></div>
         <p class="game-name">Music & Audio Games</p>
       </div>
       <div class="button-name">
-        <div class="game-img"><img src="images/Rectangle 18.png" alt="" ></div>
+        <div class="game-img"><img src="images/Rectangle 18.png" alt="" /></div>
         <p class="game-name">Puzzle Games</p>
       </div>
       <div class="button-name">
-        <div class="game-img"><img src="images/Rectangle 18.png" alt="" ></div>
+        <div class="game-img"><img src="images/Rectangle 18.png" alt="" /></div>
         <p class="game-name">Strategy Games</p>
       </div>
     </section>
+
+    <footer class="footer-section container">
+      <div class="logo flex-row-center">
+        <img src="images/Frame.png" alt="" />
+        <a href="#" class="logo-title footer-title">
+          <span class="first-letter">G</span>amer
+        </a>
+      </div>
+      <div class="footer-link link">
+        <a href="" class="text-color">Our Story</a>
+        <a href="" class="text-color">Games</a>
+        <a href="" class="text-color">Web Games</a>
+        <a href="" class="text-color">Careers</a>
+        <a href="" class="text-color">Support</a>
+      </div>
+      <div class="footer-link icon-link">
+        <a href=""><i class="bx bxl-twitter"></i></a>
+        <a href=""><i class="bx bxl-facebook-circle"></i></a>
+        <a href=""><i class="bx bxl-linkedin"></i></a>
+        <a href=""><i class="bx bxl-youtube"></i></a>
+        <a href=""><i class="bx bxl-instagram"></i></a>
+        <a href=""><i class="bx bxl-apple"></i></a>
+      </div>
+      <div class="footer-link link2 subtitle-font">
+        <a href="" class="text-color">Terms and Conditions</a>
+        <a href="" class="text-color">Privacy Policy</a>
+        <a href="" class="text-color">Cookie Policy</a>
+        <a href="" class="text-color">Privacy Settings</a>
+      </div>
+      <div class="footer-link subtitle-font">
+        Play Games &copy; Gamer &copy; 2023 Gamer Bangladesh
+      </div>
+    </footer>
   </body>
 </html>
