complete the gamer-Zone and Done

--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         </div>
       </div>
     </header>
+
     <section class="container gamer-section flex">
       <div class="section-img">
         <img src="images/pngwing 4.png" alt="" />
@@ -77,6 +78,7 @@
         </p>
       </div>
     </section>
+
     <section class="section-online-game container">
       <div class="online-game-description">
         <p class="title-font online-game-line-spacing">
@@ -93,8 +95,8 @@
           <div class="card-image">
             <div class="image-container">
               <img src="images/Rectangle4.png" alt="" />
-              <div class="overlay"></div>
-              <div class="play-now">
+              <div class="overlay overlay1"></div>
+              <div class="play-now play-now1">
                 <i class="bx bx-play-circle"></i>
                 <span>Watch Now</span>
               </div>
@@ -182,6 +184,7 @@
         </div>
       </div>
     </section>
+
     <section class="play-instantly2 container play-instantly">
       <div class="play-instantly-description2">
         <p class="title-font">
