--- a/index.html
+++ b/index.html
@@ -38,15 +38,18 @@
           <p class="banner-title">Play Like The</p>
           <p class="title-style title-font banner-title-font">G.O.A.T</p>
           <div class="subtitle-font banner-subtitle-font flex-col-center">
-            <p class="icon-text">
-              <i class="bx bxs bx-play-circle"></i> 1-Click instant play
-            </p>
-            <p class="icon-text">
-              <i class="bx bxs bx-download"></i> No Download
-            </p>
-            <p class="icon-text">
-              <i class="bx bxs bxs-group"></i> 1000s of supported online games
-            </p>
+            <div class="icon-text">
+              <div class="icon"><i class="bx bxs bx-play-circle"></i></div>
+              <div class="icon-txt">1-Click instant play</div>
+            </div>
+            <div class="icon-text">
+              <div class="icon"><i class="bx bxs bx-download"></i></div>
+              <div class="icon-text">No Download</div>
+            </div>
+            <div class="icon-text">
+              <div class="icon"><i class="bx bxs bxs-group"></i></div>
+              <div class="icon-text">1000s of supported online games</div>
+            </div>
           </div>
           <p class="flex btns">
             <a href="#"><button class="btn btn1">SIGN IN</button></a>
@@ -237,7 +240,7 @@
           <button class="btn btn3">SEE ALL POSITIONS</button>
         </div>
       </div>
-      <div>
+      <div class="carrer-image">
         <img src="images/Group 65.png" alt="" />
       </div>
     </section>
